--- a/mentor/src/app/login/login.component.css
+++ b/mentor/src/app/login/login.component.css
@@ -32,25 +32,6 @@ body {
   justify-content: center;
 }
 
-/* Imagen de usuario en la parte superior */
-.avatar {
-  background: #006400;
-  border-radius: 50%;
-  width: 80px;
-  height: 80px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 20px;
-}
-
-.avatar img {
-  width: 50%;
-  height: 50%;
-  filter: invert(1);
-  /* Esta línea hace que el icono sea blanco */
-}
-
 /* Título principal del formulario */
 .sign {
   color: #006400;
@@ -66,6 +47,12 @@ body {
   font-size: 16px;
   margin-bottom: 30px;
 }
+
+.error-message {
+  color: red; /* Cambiar a rojo */
+  text-align: center; /* Centrar el texto */
+}
+
 
 /* Grupo de entrada con íconos */
 .input-group {
@@ -156,4 +143,28 @@ body {
   text-align: center;
   line-height: 1.5;
   max-width: 300px;
+}
+
+.loading-spinner-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.loading-spinner {
+  border: 4px solid rgba(0, 0, 0, 0.1);
+  border-left-color: #00ee40; /* Puedes cambiar el color del spinner aquí */
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(860deg);
+  }
 }
