--- a/mentor/src/app/login/login.component.html
+++ b/mentor/src/app/login/login.component.html
@@ -2,11 +2,8 @@
   <div class="login-container">
     <!-- Contenedor del formulario de login -->
     <div class="login-form">
-      <div class="avatar">
-        <img src="https://cdn-icons-png.flaticon.com/512/1946/1946429.png" alt="User Icon">
-      </div>
       <p class="sign">Saludos estudiante 🎓</p>
-      <p class="sub-sign">Inicie sesion con su correo y contraseña</p>
+      <p class="sub-sign">Inicie sesion con su codigo y contraseña</p>
       <form class="form1" (ngSubmit)="onLogin()">
         <div class="input-group">
           <span class="input-icon"><i class="fa fa-envelope"></i></span>
@@ -16,7 +13,18 @@
           <span class="input-icon"><i class="fa fa-lock"></i></span>
           <input class="pass" type="password" placeholder="Password" [(ngModel)]="password" name="password" required>
         </div>
-        <button class="submit" type="submit">SIGN IN</button>
+
+        <!-- Mensaje de error cuando las credenciales son incorrectas -->
+        <div *ngIf="errorMessage" class="error-message">
+          {{ errorMessage }}
+        </div>  
+
+        <!-- Indicador de carga -->
+        <div *ngIf="isLoading" class="loading-spinner-container">
+          <div class="loading-spinner"></div>
+        </div>
+
+        <button class="submit" type="submit" [disabled]="isLoading">SIGN IN</button>
       </form>
     </div>
 
