add-image-replace-gmail-to-code

--- a/mentor/src/app/login/login.component.css
+++ b/mentor/src/app/login/login.component.css
@@ -70,6 +70,14 @@ body {
   font-size: 18px;
 }
 
+.welcome-image {
+  max-width: 50%;
+  height: auto;
+  margin-top: 20px; /* Añadir un espacio entre el texto y la imagen */
+  border-radius: 20px; /* Añadir bordes redondeados a la imagen si lo deseas */
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* Añadir sombra a la imagen */
+}
+
 .un,
 .pass {
   width: 100%;
