--- a/mentor/src/app/login/login.component.html
+++ b/mentor/src/app/login/login.component.html
@@ -6,8 +6,8 @@
       <p class="sub-sign">Inicie sesion con su codigo y contraseña</p>
       <form class="form1" (ngSubmit)="onLogin()">
         <div class="input-group">
-          <span class="input-icon"><i class="fa fa-envelope"></i></span>
-          <input class="un" type="text" placeholder="E-mail" [(ngModel)]="username" name="Codigo" required>
+          <span class="input-icon"><i class="fa fa-user"></i></span>
+          <input class="un" type="text" placeholder="Codigo" [(ngModel)]="username" name="Codigo" required>
         </div>
         <div class="input-group">
           <span class="input-icon"><i class="fa fa-lock"></i></span>
@@ -35,6 +35,9 @@
         universitaria y en todos los aspectos relacionados con su desarrollo académico, social y personal. Esperamos que
         encuentres en él una herramienta valiosa para tu crecimiento. ¡Te damos una cálida bienvenida, estudiante
         Urepiano!</p>
+
+      <!-- Añadir imagen debajo de la descripción -->
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRFsTjcivyF4DJQiKcA0i5fT_QMZZGHKQs5jA&s" alt="Bienvenida" class="welcome-image">
     </div>
   </div>
 </body>
