--- a/mentor/src/app/encuestamenotr/encuestamenotr.component.html
+++ b/mentor/src/app/encuestamenotr/encuestamenotr.component.html
@@ -56,16 +56,16 @@
 
             <!-- Especialidad -->
             <div>
-                <label for="carrera" class="block text-green-700 font-semibold">Especialidad</label>
-                <select id="carrera" name="carrera" ngModel
+                <label for="especialidad" class="block text-green-700 font-semibold">Especialidad</label>
+                <select id="especialidad" name="especialidad" ngModel
                     class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-green-300"
                     required>
                     <option value="" disabled selected>Selecciona su especialidad</option>
-                    <option value="arquitectura">Civil</option>
-                    <option value="medicina">Electronica</option>
-                    <option value="ingenieria">Informatica</option>
-                    <option value="administracion">Industrial</option>
-                    <option value="derecho">Mecatronica</option>
+                    <option value="Civil">Civil</option>
+                    <option value="Electronica">Electronica</option>
+                    <option value="Informatica">Informatica</option>
+                    <option value="Industrial">Industrial</option>
+                    <option value="Mecatronica">Mecatronica</option>
                 </select>
             </div>
 
