--- a/mentor/src/app/admin-alumno/admin-alumno.component.html
+++ b/mentor/src/app/admin-alumno/admin-alumno.component.html
@@ -97,10 +97,11 @@
             <table class="min-w-full bg-white shadow-md rounded-lg overflow-hidden">
                 <thead>
                     <tr class="bg-green-500 text-white text-left uppercase text-sm leading-normal">
-                        <th class="py-3 px-6 font-semibold">Función</th>
-                        <th class="py-3 px-6 font-semibold">Personaje</th>
+                        <th class="py-3 px-6 font-semibold">Codigo</th>
                         <th class="py-3 px-6 font-semibold">Nombre</th>
+                        <th class="py-3 px-6 font-semibold">Apellido</th>
                         <th class="py-3 px-6 font-semibold">Carrera</th>
+                        <th class="py-3 px-6 font-semibold">Especialidad</th>
                         <th class="py-3 px-6 font-semibold">Ciclo</th>
                         <th class="py-3 px-6 font-semibold">Cumpleaños</th>
                         <th class="py-3 px-6 font-semibold text-center">Acciones</th>
@@ -108,10 +109,11 @@
                 </thead>
                 <tbody class="text-gray-700 text-sm">
                     <tr *ngFor="let encuesta of encuestas; let i = index" class="border-b hover:bg-gray-100">
-                        <td class="py-3 px-6 border border-gray-200">{{ encuesta.funcion }}</td>
-                        <td class="py-3 px-6 border border-gray-200">{{ encuesta.personaje }}</td>
+                        <td class="py-3 px-6 border border-gray-200">{{ encuesta.codigo }}</td>
                         <td class="py-3 px-6 border border-gray-200">{{ encuesta.nombre }}</td>
-                        <td class="py-3 px-6 border border-gray-200">{{ encuesta.carrera }}</td>
+                        <td class="py-3 px-6 border border-gray-200">{{ encuesta.apellido }}</td>
+                        <td class="py-3 px-6 border border-gray-200">Ingeniería</td>
+                        <td class="py-3 px-6 border border-gray-200">{{ encuesta.especialidad }}</td>
                         <td class="py-3 px-6 border border-gray-200">{{ encuesta.ciclo }}</td>
                         <td class="py-3 px-6 border border-gray-200">{{ encuesta.cumpleanos }}</td>
                         <td class="py-3 px-6 border border-gray-200 text-center flex gap-2 justify-center">
@@ -133,26 +135,32 @@
             <div class="bg-white p-6 rounded-lg shadow-lg w-1/2">
                 <h3 class="text-xl font-bold mb-4">Editar Encuesta</h3>
                 <form (ngSubmit)="saveEdit()">
-                    <label class="block mb-2">Función</label>
-                    <input [(ngModel)]="editingEncuesta.funcion" name="funcion"
-                        class="w-full p-2 border rounded-md mb-4" />
-
-                    <label class="block mb-2">Personaje</label>
-                    <input [(ngModel)]="editingEncuesta.personaje" name="personaje"
-                        class="w-full p-2 border rounded-md mb-4" />
-
+                    <label class="block mb-2">Codigo</label>
+                    <input [(ngModel)]="editingEncuesta.codigo" name="codigo" class="w-full p-2 border rounded-md mb-4" />
+                    
                     <label class="block mb-2">Nombre</label>
-                    <input [(ngModel)]="editingEncuesta.nombre" name="nombre"
+                    <input [(ngModel)]="editingEncuesta.nombre" name="nombre" class="w-full p-2 border rounded-md mb-4" />
+    
+                    <label class="block mb-2">Apellido</label>
+                    <input [(ngModel)]="editingEncuesta.apellido" name="apellido"
                         class="w-full p-2 border rounded-md mb-4" />
-
-                    <label class="block mb-2">Carrera</label>
-                    <input [(ngModel)]="editingEncuesta.carrera" name="carrera"
-                        class="w-full p-2 border rounded-md mb-4" />
-
+    
+                    <!-- <label class="block mb-2">Carrera</label>
+                    <input [(ngModel)]="editingEncuesta.carrera" name="carrera" class="w-full p-2 border rounded-md mb-4" value="Ingeniería" /> -->
+    
+                    <label class="block mb-2">Especialidad</label>
+                    <select [(ngModel)]="editingEncuesta.especialidad" name="especialidad" class="w-full p-2 border rounded-md mb-4">
+                        <option value="Informatica">Informática</option>
+                        <option value="Civil">Civil</option>
+                        <option value="Industrial">Industrial</option>
+                        <option value="Mecatronica">Mecatrónica</option>
+                        <option value="Electronica">Electrónica</option>
+                    </select>
+    
                     <label class="block mb-2">Ciclo</label>
                     <input [(ngModel)]="editingEncuesta.ciclo" name="ciclo" type="number"
                         class="w-full p-2 border rounded-md mb-4" />
-
+    
                     <label class="block mb-2">Cumpleaños</label>
                     <input [(ngModel)]="editingEncuesta.cumpleanos" name="cumpleanos" type="date"
                         class="w-full p-2 border rounded-md mb-4" />
