--- a/mentor/src/app/login/login.component.html
+++ b/mentor/src/app/login/login.component.html
@@ -2,21 +2,29 @@
   <div class="login-container">
     <!-- Contenedor del formulario de login -->
     <div class="login-form">
-      <div class="avatar">
-        <img src="https://cdn-icons-png.flaticon.com/512/1946/1946429.png" alt="User Icon">
-      </div>
       <p class="sign">Saludos estudiante 🎓</p>
-      <p class="sub-sign">Inicie sesion con su correo y contraseña</p>
+      <p class="sub-sign">Inicie sesion con su codigo y contraseña</p>
       <form class="form1" (ngSubmit)="onLogin()">
         <div class="input-group">
-          <span class="input-icon"><i class="fa fa-envelope"></i></span>
-          <input class="un" type="text" placeholder="E-mail" [(ngModel)]="username" name="Codigo" required>
+          <span class="input-icon"><i class="fa fa-user"></i></span>
+          <input class="un" type="text" placeholder="Codigo" [(ngModel)]="username" name="Codigo" required>
         </div>
         <div class="input-group">
           <span class="input-icon"><i class="fa fa-lock"></i></span>
           <input class="pass" type="password" placeholder="Password" [(ngModel)]="password" name="password" required>
         </div>
-        <button class="submit" type="submit">SIGN IN</button>
+
+        <!-- Mensaje de error cuando las credenciales son incorrectas -->
+        <div *ngIf="errorMessage" class="error-message">
+          {{ errorMessage }}
+        </div>
+
+        <!-- Indicador de carga -->
+        <div *ngIf="isLoading" class="loading-spinner-container">
+          <div class="loading-spinner"></div>
+        </div>
+
+        <button class="submit" type="submit" [disabled]="isLoading">SIGN IN</button>
       </form>
     </div>
 
@@ -25,8 +33,11 @@
       <h2>!Bienvenido al Programa de Mentoría!</h2>
       <p>Este programa ha sido creado con el objetivo de apoyar a los estudiantes en su adaptación a la vida
         universitaria y en todos los aspectos relacionados con su desarrollo académico, social y personal. Esperamos que
-        encuentres en él una herramienta valiosa para tu crecimiento. ¡Te damos una cálida bienvenida, estudiante
-        Urepiano!</p>
+        encuentres en él una herramienta valiosa para tu crecimiento. ¡Te damos una cálida bienvenida, estudiante!</p>
+
+      <!-- Añadir imagen debajo de la descripción -->
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRFsTjcivyF4DJQiKcA0i5fT_QMZZGHKQs5jA&s"
+        alt="Bienvenida" class="welcome-image">
     </div>
   </div>
 </body>
