--- a/mentor/src/app/principal/principal.component.html
+++ b/mentor/src/app/principal/principal.component.html
@@ -35,7 +35,9 @@
                     asesoría dedicada para asegurar su éxito académico y fomentar su desarrollo personal.
                 </p>
             </div>
+
         </div>
+
     </section>
 
     <section id="nuestros-programas">
@@ -58,15 +60,10 @@
                   <h3>reuniones</h3>
                   <p>Únete como mentoreado y aprende de la experiencia de nuestros mentores para desarrollar tus
                     habilidades.</p>
-                  <button class="btn btn-primary" (click)="reuprincial()">UNIRTE</button>
+                  <button class="btn btn-primary" (click)="mentoriado()">UNIRTE</button>
                 </div>
             </div>
-            <br>
-            <!-- Agregar enlace para descargar el documento -->
-            <p>Para mayor información acerca de nuestros programas, descarga el documento haciendo click
-                <a href="https://drive.google.com/uc?export=download&id=1B75X0im7wluz_e0rLx2mV0xGqb4RFh7O" download
-                    class="resaltado">aquí</a>
-            </p>
+
 
         </div>
     </section>
