--- a/mentor/src/app/principal/principal.component.html
+++ b/mentor/src/app/principal/principal.component.html
@@ -60,7 +60,7 @@
                   <h3>reuniones</h3>
                   <p>Únete como mentoreado y aprende de la experiencia de nuestros mentores para desarrollar tus
                     habilidades.</p>
-                  <button class="btn btn-primary" (click)="mentoriado()">UNIRTE</button>
+                  <button class="btn btn-primary" (click)="reuprincial()">UNIRTE</button>
                 </div>
             </div>
 
