--- a/mentor/src/app/admin-reuniones/admin-reuniones.component.html
+++ b/mentor/src/app/admin-reuniones/admin-reuniones.component.html
@@ -102,11 +102,16 @@
             </tr>
           </thead>
           <tbody>
-            <tr *ngFor="let reunion of reuniones" class="hover:bg-gray-100">
+            <tr *ngFor="let reunion of reuniones; let i = index" class="hover:bg-gray-100">
               <td class="py-2 px-4 border border-gray-300">{{ reunion.mentor }}</td>
               <td class="py-2 px-4 border border-gray-300">{{ reunion.dia }}</td>
               <td class="py-2 px-4 border border-gray-300">{{ reunion.hora }}</td>
               <td class="py-2 px-4 border border-gray-300">{{ reunion.aula }}</td>
+              <td class="py-2 px-4 border border-gray-300 text-center">
+                <button (click)="deleteReunion(i)" class="bg-red-600 hover:bg-red-700 text-white py-1 px-2 rounded-md text-sm">
+                  Eliminar
+                </button>
+              </td>
             </tr>
           </tbody>
         </table>
@@ -137,6 +142,12 @@
             <label for="aula" class="block text-sm font-medium">Aula:</label>
             <input type="text" id="aula" [(ngModel)]="newReunion.aula" name="aula" class="w-full p-2 border rounded"
               required />
+          </div>
+          <div *ngFor="let reunion of reuniones; let i = index">
+            <p>
+              Mentor: {{ reunion.mentor }}, Día: {{ reunion.dia }}, Hora: {{ reunion.hora }}, Aula: {{ reunion.aula }}
+              <button (click)="deleteReunion(i)">Eliminar</button>
+            </p>
           </div>
           <button type="submit" class="bg-green-600 text-white px-4 py-2 rounded">Guardar</button>
           <button type="button" (click)="closeModal()" class="ml-2 px-4 py-2 rounded border">Cancelar</button>
